<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:background="#EDE7F6"
                android:gravity="center"
                android:padding="15dp"
                android:text="CRITICAL THICKNESS OF INSULATION FOR CYLINDERS"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="#E1F5FE"
                android:padding="15dp"
                android:text="@string/ct_formula"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="#EDE7F6"
                android:gravity="center"
                android:padding="15dp"
                android:text="ANNOTATIONS"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="#E1F5FE"
                android:padding="15dp"
                android:text="@string/ct_parameters"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_parameters_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="#EDE7F6"
                android:gravity="center"
                android:padding="15dp"
                android:text="PARAMETERS"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/ct_param_one"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumber1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ct_param_two"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ct_param_three"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumber3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ct_param_four"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumber4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ct_param_five"
                android:inputType="number"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumber5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ct_param_six"
                android:inputType="number"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumber6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ct_param_seven"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumber7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ct_param_eight"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="Save" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="Delete" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:background="#EDE7F6"
                android:gravity="center"
                android:padding="15dp"
                android:text="SAVED VALUES"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/p6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/p8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/p10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/p12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="TextView"
                    android:textColor="#000000" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:layout_weight="1"
                android:text="Graph" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>